# Iris-ARC

./: .env.example  .gitignore  README.md  _OPTIMIZATION_LOG.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
scripts/: generate-icons.js  generate-tauri-icons.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  openrouter.rs  server.rs  state.rs
src-tauri/src/commands/: chat.rs  models.rs
src/components/: AuthProvider.tsx  ChatBox.tsx  ChatWindow.tsx  FilePreview.tsx  LockScreen.tsx  MessageBubble.tsx  ModelSelector.tsx  ProtectedRoute.tsx  SearchModal.tsx  SettingsModal.tsx
src/components/ui/: button.tsx  dialog.tsx  scroll-area.tsx
src/hooks/: use-models-query.ts
src/lib/: constants.ts  crypto.ts  helpers.ts  schemas.ts  supabase.ts
src/lib/__tests__/: crypto.test.ts  helpers.test.ts  schemas.test.ts
src/pages/: AuthPage.tsx  LoginPage.tsx  SignupPage.tsx
src/stores/: auth-store.ts  chat-store.ts  profile-store.ts  settings-store.ts
src/stores/__tests__/: settings-store.test.ts
src/types/: global.d.ts
